--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,20 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
+
+app.jwt.secret=mySecretKey
+app.jwt.expiration=86400000
+app.jwt.refresh-expiration=604800000
+app.database.connection-timeout=30000
+app.database.max-pool-size=10
+app.database.min-pool-size=2
+app.security.cors.allowed-origins=*
+app.security.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.security.cors.allowed-headers=*
+app.security.cors.allow-credentials=true
+app.security.rate-limit.enabled=true
+app.security.rate-limit.requests-per-minute=100
+app.security.rate-limit.burst-capacity=200
+
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
