Final Fixes with Junit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,18 @@ app.security.rate-limit.burst-capacity=200
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# API base path and version
+app.api.base-path=/electricity-bill-payment
+app.api.version=v1
+
+# Do not expose stack traces or exception details in error responses
+server.error.include-exception=false
+server.error.include-stacktrace=never
+server.error.include-message=never
+server.error.include-binding-errors=never
+spring.mvc.problemdetails.enabled=false
+
+# Route 404s to our @ControllerAdvice for consistent envelope
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
